<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:focusableInTouchMode="true"
    android:clickable="true"
    tools:context="com.work.fyc.MyWork.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/name"
        android:inputType="text"
        android:lines="1"
        android:textColorHint="@color/gray"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:alpha="0.6"
        android:background="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"/>

    <EditText
        android:id="@+id/userPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/password"
        android:lines="1"
        android:inputType="textPassword"
        android:textColorHint="@color/gray"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:alpha="0.6"
        android:background="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"/>

    <Button
        android:id="@+id/login_bt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/login"
        android:textColor="@color/blue"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="20sp"
        android:background="@drawable/bt_bg"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/forget_pw"/>

        <TextView
            android:id="@+id/visit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_centerHorizontal="true"
            android:text="@string/visit"/>

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_alignParentRight="true"
            android:text="@string/reg"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>

</LinearLayout>
