<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:focusableInTouchMode="true"
    android:clickable="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5"/>

    <EditText
        android:id="@+id/reg_username"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/name"
        android:lines="1"
        android:inputType="text"
        android:textColorHint="@color/gray"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:alpha="0.6"
        android:background="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>

    <EditText
        android:id="@+id/reg_userpassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/password"
        android:lines="1"
        android:inputType="textPassword"
        android:textColorHint="@color/gray"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:alpha="0.6"
        android:background="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>

    <EditText
        android:id="@+id/reg_userpassword_sure"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/password_sure"
        android:lines="1"
        android:inputType="textPassword"
        android:textColorHint="@color/gray"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:alpha="0.6"
        android:background="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>

    <Button
        android:id="@+id/reg_bt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/register"
        android:textColor="@color/blue"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="20sp"
        android:background="@drawable/bt_bg"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>

</LinearLayout>