<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:clickable="true">

    <include layout="@layout/tool_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <ImageView
            android:id="@+id/pic"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:scaleType="fitStart"
            android:src="@drawable/add_pic"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:text="@string/section"/>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinner"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <EditText
            android:id="@+id/title_s"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:layout_margin="5dp"
            android:textSize="15sp"
            android:hint="@string/title"
            android:textColor="@color/black"
            android:background="@color/blue2"
            android:padding="3dp"
            android:gravity="top"/>

        <EditText
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.1"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="15sp"
            android:hint="@string/content"
            android:textColor="@color/black"
            android:background="@color/blue2"
            android:padding="3dp"
            android:gravity="top"/>

    </LinearLayout>

</LinearLayout>