<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/LL_1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <com.work.fyc.MyWork.Circle
            android:id="@+id/person"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/bg"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_vertical"
            android:text="dddd"
            android:textSize="15sp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LL_2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/LL_1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pic"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/section"
            android:layout_marginLeft="5dp"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_c"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.3"
                android:text="ffff"
                android:textSize="15sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:layout_marginTop="2dp"
                android:text="dddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd"
                android:textSize="12sp"
                android:textColor="@color/black"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="2015.11.25"
        android:layout_below="@id/LL_2"
        android:paddingBottom="5dp"
        android:textColor="@color/gray"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/LL_2"
        android:layout_alignParentRight="true"
        android:paddingBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/look"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/look"
            android:layout_marginRight="5dp"
            android:textColor="@color/gray"/>

        <TextView
            android:id="@+id/del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/del"
            android:layout_marginRight="5dp"
            android:textColor="@color/gray"/>

        <TextView
            android:id="@+id/top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top"
            android:layout_marginRight="5dp"
            android:textColor="@color/gray"/>

    </LinearLayout>

</RelativeLayout>